# taisei

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  CMakeLists.txt  CMakeLists.txt.orig  COPYING  COPYING.txt  COPYING_CN.txt  Dockerfile  Dockerfile-builder  ENVIRON.md  FindALUT.cmake  FindGLEW.cmake  FindOGG.cmake  FindVorbisFile.cmake  GAME.md  GameExplanation.txt  Makefile  OSX-iconset.icns  README  README.md  README.rst  README_CN.rst  README_installed.txt  STORY.txt  checkout  config.example  meson.build  meson_options.txt  pull  story.txt  taisei.desktop  taisei.diff
atlas/: meson.build
atlas/config/: atlas.tex  yinyang.spr
atlas/overrides/: .gitignore  boss_circle.spr  boss_indicator.spr  boss_spellcircle0.spr  fairy_circle_big.spr  fairy_circle_big_and_mean.spr  fairy_circle_red.spr  focus.spr  hakkero.spr  star.spr  yinyang.spr
doc/: ANIMATION.rst  ANIMATION_FORMAT.rst  BASISU.rst  BUILD.rst  CI.rst  COMPILING.rst  CONTROLLER.rst  DEVELOPMENT.rst  ENVIRON.md  ENVIRON.rst  ENVIRONMENT.rst  ENVIRON_CN.rst  GAME.md  GAME.rst  GAME_CN.rst  GRAPHICS.rst  MANUAL.rst  MATH.rst  PACKAGING.md  README.rst  README.txt  README_CN.rst  STORY.txt  STORY_CN.txt  TROUBLESHOOTING.rst  meson.build  spellcard_CN.txt  taisei.css
emscripten/: meson.build  postamble.js  preamble.js  shell.html
misc/: Info.plist.in  glslc-test-basic.frag.glsl  glslc-test-uniform-location.frag.glsl  glslc-test.frag.glsl  meson.build  taisei-angle.bat
misc/ci/: Dockerfile.angle  Dockerfile.linux  Dockerfile.switch  Dockerfile.windows  Makefile  common-options.ini  emscripten-build-ci.ini  emscripten-build-test-ci.ini  emscripten-build.ini  forcefallback.ini  linux-x86_64-build-release.ini  linux-x86_64-build-test-ci.ini  linux-zigcc.ini  macos-aarch64-build-release.ini  macos-aarch64-build-test-ci.ini  macos-ugly-sdl3-hack.ini  macos-x86_64-build-release.ini  macos-x86_64-build-test-ci.ini  nofallback.ini  switch-options.ini  windows-llvm_mingw-x86-build-release.ini  windows-llvm_mingw-x86_64-build-release.ini  windows-llvm_mingw-x86_64-build-test-ci.ini
misc/gamecontrollerdb/: .gitrepo
misc/icons/: Taisei.icns
misc/tests/: test-replay.tsr
po/: LINGUAS  POTFILES  de.po  extra_strings.c  fr.po  fr_CA.po  meson.build  taisei.pot  tr.po  zh_CN.po
resources/: meson.build
resources/00-taisei.pkgdir/: .nocompress  meson.build
resources/bgm/: bgm.conf  bonus0.bgm  credits.bgm  stage1.bgm  stage1boss.bgm  stage2.bgm  stage2boss.bgm  stage3.bgm  stage3boss.bgm  stage4.bgm  stage4boss.bgm  stage5.bgm  stage5boss.bgm  stage6boss_phase3.bgm
resources/fonts/: Exo2-Regular-CHANGES  big.font  hud.font  small.font  standard.font
resources/gfx/: atlas_common_0.tex  atlas_common_ui_0.tex  atlas_gray16_0.tex  atlas_huge_0.tex  atlas_newart_0.tex  atlas_portraits_0.tex  boss_circle.spr  boss_indicator.spr  boss_spellcircle0.spr  elly.ani  fairy_circle.spr  fire.ani  fire.frame0000.spr  fire.frame0001.spr  fire.frame0002.spr  fire.frame0003.spr  fire.frame0004.spr  fire.frame0005.spr  fire.frame0006.spr  fire.frame0007.spr  fire.frame0008.spr  fire.frame0009.spr  fire.frame0010.spr  fire.frame0011.spr  fire.frame0012.spr  fire.frame0013.spr  fire.frame0014.spr  fire.frame0015.spr  fire.frame0016.spr  fire.frame0017.spr  fire.frame0018.spr  fire.frame0019.spr  fire.frame0020.spr  fire.frame0021.spr  fire.frame0022.spr  fire.frame0023.spr  fire.frame0024.spr  focus.spr  gaplight.tex  hakkero.spr  (+8 more)
resources/sfx/: volumes.conf
resources/shader/: alpha_depth.frag.glsl  alpha_depth.prog  alpha_depth.sha  baryon_feedback.frag.glsl  baryon_feedback.prog  bloom.frag.glsl  bloom.prog  blur13.frag.glsl  blur13.prog  blur25.frag.glsl  blur25.prog  blur5.frag.glsl  blur5.prog  blur9.frag.glsl  blur9.prog  boss_death.frag.glsl  boss_zoom.frag.glsl  boss_zoom.prog  boss_zoom.sha  circleclipped_indicator.frag.glsl  circleclipped_indicator.prog  circleclipped_indicator.sha  copy_depth.prog  fxaa.frag.glsl  fxaa.prog  glitch.frag.glsl  glitch.prog  glitch.sha  graph.frag.glsl  graph.prog  graph.sha  healthbar.frag.glsl  healthbar.prog  healthbar_linear.prog  healthbar_radial.frag.glsl  hud_text.frag.glsl  hud_text.prog  hud_text.sha  ingame_menu.frag.glsl  ingame_menu.prog  (+120 more)
scripts/: CPackRuntimeSettings.cmake  CPackRuntimeSettings.cmake.in  CPackSettings.cmake  CheckAndSetFlags.cmake  CheckCCompilerAndLinkerFlag.cmake  NSIS.InstallOptions.ini  OSXInstallDylibs.cmake.in  PostInstallRelease.cmake.in  Win32FixDocs.cmake.in  automaterials.py  check-submodules.py  cmake_uninstall.cmake.in  configure-file.py  dump-build-options.py  em-set-bundle-uuid.py  emcc-wrapper.py  eolconv.py  extract_format_strings.py  fix-win32-doc.py  format-array.py  gen-atlas.py  gen-atlases.py  gen-blur-shader.py  gen-dist.py  gen-emscripten-fs.py  gen-font.py  gen-opengl-header.py  gen-potfiles.py  gen-zip.py  glob-search.py  glob.py  index-resources.py  leanify-all.sh  leanify_data.cmake.in  macos-deps-install.sh  macos-gen-dmg.py  macos-gen-dmg.sh  macos-install-dylibs.py  macos_build_universal.sh  macos_configure_env.sh  (+28 more)
scripts/ci/: linux-x86_64-build-test-ci.ini  macos-x86_64-build-test-ci.ini  windows-llvm_mingw-x86_64-build-test-ci.ini
scripts/cmake-modules/: CheckAndSetFlags.cmake  CheckCCompilerAndLinkerFlag.cmake  NSIS.template.in
scripts/docker/: Dockerfile.angle  (+2 more)
src/: CMakeLists.txt  animation.c  animation.h  aniplayer.c  aniplayer.h  arch_switch.c  arch_switch.h  assert.c  assert.h  audio.c  audio.h  audio_common.c  audio_mixer.c  audio_mixer.h  audio_null.c  bitarray.h  boss.c  boss.h  camcontrol.c  camcontrol.h  cli.c  cli.h  color.c  color.h  common_tasks.c  common_tasks.h  compat.h  config.c  config.h  config.l  config.y  coroutine.c  coroutine.h  credits.c  credits.h  cutscene.c  cutscene.h  dialog.c  dialog.h  difficulty.c  (+150 more)
test/: meson.build  shader_transpiler.c  test_common.h
xdg/: meson.build  org.taisei_project.Taisei.appdata.xml  org.taisei_project.Taisei.desktop  org.taisei_project.Taisei.tsr.desktop  org.taisei_project.Taisei.xml  taisei-replay-viewer.desktop  taisei.desktop
(+2548 files in other folders)
